--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">knopka_2</string>
-    <string name="click_me">Click me</string>
+    <string name="app_name">Кнопка_2</string>
 </resources>
